force-app/main/default/objects/Assignment__c/Assignment__c.object-meta.xml
<CustomObject>
    <label>Assignment</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>