force-app/main/default/objects/Assignment__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <inlineHelpText>Number between 1-10</inlineHelpText>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>