force-app/main/default/objects/Assignment__c/validationRules/Due_Date_Five_Days_After.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Five_Days_After</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt;= ( TODAY() + 5)</errorConditionFormula>
    <errorMessage>Due date cannot bee sooner than 5 days after creation</errorMessage>
</ValidationRule>