force-app/main/default/objects/Assignment__c/validationRules/Max_Score_Between_1_and_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Score_Between_1_and_10</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Score__c &lt; 1 ||  Max_Score__c &gt; 10</errorConditionFormula>
    <errorMessage>Max Score should be a number between 1 and 10 (inclusive)</errorMessage>
</ValidationRule>