force-app/main/default/objects/Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Max_Score__c</columns>
    <columns>Course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>